UI-Common component added

--- a/App/ClientApp/src/app/login/login.component.html
+++ b/App/ClientApp/src/app/login/login.component.html
@@ -43,7 +43,7 @@
         </div>
         <div class="row mb-2">
           <div class="col-sm-12 mt-4">
-            <button type="button" class="btn btn-default btn-block" (click)="checkLogin()">Login</button>
+            <button type="button" class="btn btn-default btn-block" (click)="OnSubmit()">Login</button>
             <!--<small class="form-text text-muted">{{msg}}</small>-->
           </div>
         </div>
