--- a/App/ClientApp/src/app/layout/roles/list/list.component.html
+++ b/App/ClientApp/src/app/layout/roles/list/list.component.html
@@ -5,7 +5,7 @@
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
     <div>
-      <button class="btn-add btn-cust" id="btnAddUsers" routerLink="Add">
+      <button class="btn-add btn-cust" id="btnAddRoles" routerLink="Add">
         <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Role
       </button>
 
@@ -26,12 +26,12 @@
         <!-- Position Column -->
         <ng-container matColumnDef="name">
           <th class="width40 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-          <td mat-cell *matCellDef="let element">{{element.name}}</td>
+          <td mat-cell *matCellDef="let element">{{element.Name}}</td>
         </ng-container>
 
         <ng-container matColumnDef="description">
           <th class="width48 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-          <td mat-cell *matCellDef="let element">{{element.description}} </td>
+          <td mat-cell *matCellDef="let element">{{element.Description}} </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
