--- a/App/ClientApp/src/app/layout/roles/list/list.component.html
+++ b/App/ClientApp/src/app/layout/roles/list/list.component.html
@@ -5,7 +5,8 @@
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
     <div>
-      <button class="btn-add btn-cust" id="btnAddRoles" routerLink="Add">
+      <button class="btn-add btn-cust" id="btnAddRoles" (click)="navigateToRoleAdd()" 
+        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Create' }))">
         <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Role
       </button>
 
@@ -38,16 +39,19 @@
           <th class="width12 ip-w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
           <td mat-cell *matCellDef="let role">
             <div class="action-btns btn-tbl-action">
-              <button type="button" id="btnViewRole" (click)="navigateToRoleView(role)">
-                    <span class="fa fa-file-text-o"></span>
-                </button>
-                <button type="button" id="btnUpdateRole" (click)="navigateToRoleEdit(role)">
-                    <span class="fa fa-pencil-square-o"></span>
-                </button>
-                <button type="button" id="btnDeleteRole" (click)="deleteRole(role)">
-                    <span class="fa fa-trash-o"></span>
-                </button>
-            </div>
+              <button type="button" id="btnViewTile" (click)="navigateToRoleView(role)"
+                      *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'View' }))">
+                  <span class="fa fa-file-text-o"></span>
+              </button>
+              <button type="button" id="btnUpdateTile" (click)="navigateToRoleEdit(role)"
+                      *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' }))">
+                  <span class="fa fa-pencil-square-o"></span>
+              </button>
+              <button type="button" id="btnDeleteTile" (click)="deleteRole(role)"
+                      *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Delete' }))">
+                  <span class="fa fa-trash-o"></span>
+              </button>
+          </div>
           </td>
         </ng-container>
 
@@ -59,37 +63,40 @@
   </div>
   <!--desktop view end-->
 
-  <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
-    <div class="filter-head">
-      <label class="m-0">Apply Filter</label>
-    </div>
-    <div class="filter-body-left d-flex flex-column stylescrollbar">
-      <div class="form-group">
-        <label>Name</label>
-        <input type="text" class="form-control">
+  <form [formGroup]="roleFilterForm">    
+      <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
+        <div class="filter-head">
+          <label class="m-0">Apply Filter</label>
+        </div>
+        <div class="filter-body-left d-flex flex-column stylescrollbar">
+          <div class="form-group">
+            <label>Name</label>
+            <input type="text" class="form-control" id="filterRoleName" formControlName="filterRoleName">
+          </div>
+        </div>
+        <!--[ngClass]="filterClass"-->
+        <div class="filter-footer">
+          <ul class="nav">
+              <li class="nav-item width33" id="liSearchFilter" title="Search">
+                  <a class="nav-link p-0" (click)="searchFilter('search')">
+                      <span class="fa fa-check"></span>
+                  </a>
+              </li>
+              <li class="nav-item width33" id="liResetFilter" title="Reset">
+                  <a class="nav-link p-0" (click)="searchFilter('reset')">
+                      <span class="fa fa-refresh"></span>
+                  </a>
+              </li>
+              <li class="nav-item width33" id="liCloseFilter" title="Close" (click)="isFilter=!isFilter">
+                  <a class="nav-link p-0">
+                      <span class="fa fa-close"></span>
+                  </a>
+              </li>
+          </ul>
       </div>
     </div>
-    <!--[ngClass]="filterClass"-->
-    <div class="filter-footer">
-      <ul class="nav">
-          <li class="nav-item width33" id="liSearchFilter" title="Search">
-              <a class="nav-link p-0" (click)="searchFilter('search')">
-                  <span class="fa fa-check"></span>
-              </a>
-          </li>
-          <li class="nav-item width33" id="liResetFilter" title="Reset">
-              <a class="nav-link p-0" (click)="searchFilter('reset')">
-                  <span class="fa fa-refresh"></span>
-              </a>
-          </li>
-          <li class="nav-item width33" id="liCloseFilter" title="Close" (click)="isFilter=!isFilter">
-              <a class="nav-link p-0">
-                  <span class="fa fa-close"></span>
-              </a>
-          </li>
-      </ul>
-  </div>
-  </div>
+  </form>
+
 </div>
 
 <div class="overlay" [ngClass]="!isFilter? 'hide':'show'"></div>
