--- a/App/ClientApp/src/app/layout/users/list/list.component.html
+++ b/App/ClientApp/src/app/layout/users/list/list.component.html
@@ -52,14 +52,18 @@
           <ng-container matColumnDef="active">
             <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Active </th>
             <td mat-cell *matCellDef="let element">
-              <span class="fa fa-toggle-on text-success font20" title="element.IsActive"></span>
+              <span *ngIf="element.IsActive" class="fa fa-toggle-on text-success font20" title="element.IsActive"></span>
+              <span *ngIf="!element.IsActive" class="fa fa-toggle-off text-success font20" title="element.IsActive"></span>
+
             </td>
           </ng-container>
 
           <ng-container matColumnDef="lock">
             <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Lock </th>
             <td mat-cell *matCellDef="let element">
-              <span class="fa fa-toggle-on text-secondary font20" title="element.IsLock"></span>
+              <span *ngIf="element.IsLock" class="fa fa-toggle-on text-secondary font20" title="element.IsLock"></span>
+              <span *ngIf="!element.IsLock" class="fa fa-toggle-off text-secondary font20" title="element.IsLock"></span>
+
             </td>
           </ng-container>
 
