--- a/App/ClientApp/src/app/layout/users/view/view.component.html
+++ b/App/ClientApp/src/app/layout/users/view/view.component.html
@@ -48,8 +48,8 @@
   </div>
   <div class="card border-0 mt-4 mb-3 bg-transparent">
     <div class="card-body p-0">
-      <button class="btn-footer-fill mr-2" id="btnSave">Update</button>
-      <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete">Delete</button>
+      <button class="btn-footer-fill mr-2" id="btnSave" (click)="editUser()">Update</button>
+      <button class="btn-footer-fill-delete bg-danger mr-2" (click)="deleteUser()" id="btnDelete">Delete</button>
       <button class="btn-footer-outline" id="btnCancel" (click)="backClicked()">Cancel</button>
     </div>
   </div>
